# NeuralNets

./: .gitignore  Dockerfile  README.md  cleanup.sh  pyproject.toml  requirements.txt  setup.sh
notebooks/: 01_nn_basics.ipynb  01_single_layer_implementation.ipynb  02_backprop_basics.ipynb  02_backpropagation.ipynb  03_nn_multiple.ipynb  04_05_transformations_loss.ipynb  06_cnn_basics.ipynb  resnet.ipynb
notebooks/.ipynb_checkpoints/: 01_single_layer_implementation-checkpoint.ipynb  02_backprop_basics-checkpoint.ipynb
notebooks/ResNet/: checkpoint.pth  loader.py  main.py  model.pth  resnet.ipynb  trainer.py  utils.py
notebooks/Tutorials/: 03_nn_multiple.ipynb  04_05_transformations_loss.ipynb  06_cnn_basics.ipynb
pretrained/: resnet20.pth  resnet32.pth  resnet44.pth  resnet56.pth
resnet/: loader.py  main.py  model.pth  resnet.ipynb  trainer.py  utils.py
tutorials/: 02_backprop_basics.ipynb
